# konoha

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  master_ci.yml  pr_ci.yml  publish.yml  pythonpackage.yml
data/: download_spm.sh  model.knm
docker/app/: Dockerfile
docker/dev/: Dockerfile
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/reference/: index.rst  konoha_token.rst  sentence_tokenizer.rst  word_tokenizer.rst
docs/source/reference/api/: index.rst
docs/source/reference/data/: index.rst  resource.rst  token.rst
docs/source/reference/integrations/: allennlp.rst  index.rst
docs/source/reference/word_tokenizers/: character_tokenizer.rst  index.rst  janome_tokenizer.rst  kytea_tokenizer.rst  mecab_tokenizer.rst  nagisa_tokenizer.rst  sentencepiece_tokenizer.rst  sudachi_tokenizer.rst  tokenizer.rst  whitespace_tokenizer.rst
example/: Konoha_Example.ipynb  tokenize_demo.py  tokenize_document.py
konoha/: __init__.py  konoha_token.py  resource.py  sentence_tokenizer.py  word_tokenizer.py
konoha/api/: server.py  tokenizers.py
konoha/api/v1/: batch_tokenization.py  tokenization.py
konoha/data/: resource.py  token.py
konoha/integrations/: __init__.py  _allennlp.py  allennlp.py
konoha/word_tokenizers/: __init__.py  character_tokenizer.py  janome_tokenizer.py  kytea_tokenizer.py  mecab_tokenizer.py  nagisa_tokenizer.py  sentencepiece_tokenizer.py  sudachi_tokenizer.py  tokenizer.py  whitespace_tokenizer.py
libexec/: api.py
script/: tokenize_document.py
src/: sentence_tokenizer.py
src/konoha/: __init__.py  sentence_tokenizer.py  word_tokenizer.py
src/konoha/api/: server.py
src/konoha/api/v1/: batch_tokenization.py  tokenization.py
src/konoha/data/: resource.py  token.py
src/konoha/word_tokenizers/: __init__.py  janome_tokenizer.py  konoha_api_tokenizer.py  kytea_tokenizer.py  sentencepiece_tokenizer.py  whitespace_tokenizer.py
test_fixtures/: classifier.jsonnet  classifier_v1.jsonnet  sentences.txt
test_fixtures/word_tokenizers/: mecab.jsonl  whitespace.jsonl
test_fixtures/word_tokenizers/character/: wakati.jsonl
test_fixtures/word_tokenizers/kytea/: full.jsonl  wakati.jsonl
test_fixtures/word_tokenizers/nagisa/: full.jsonl  wakati.jsonl
test_fixtures/word_tokenizers/sentencepiece/: wakati.jsonl
test_fixtures/word_tokenizers/sudachi/: full.jsonl
tests/: test_character_tokineze.py  test_sentence_tokenize.py  test_sentence_tokenizer.py  test_token.py  test_word_tokenize.py  test_word_tokenizer.py  test_word_tokenizer_with_remote_resource.py
tests/api/v1/: test_batch_tokenization.py  test_batch_tokenization_with_remote_resource.py  test_tokenization.py  test_tokenization_with_remote_resource.py
tests/data/: test_token.py
tests/integrations/: test_allennlp_integration.py
tests/sentence_tokenizer/: test_sentence_tokenize.py
tests/word_tokenizer/: test_character_tokenizer.py  test_fit.py  test_janome_tokenizer.py  test_kytea_tokenizer.py  test_mecab_tokenizer.py  test_nagisa_tokenizer.py  test_pastagging.py  test_postagging.py  test_remote_tokenizer.py  test_segmentation.py  test_segmentation_with_remote.py  test_sentencepiece_tokenizer.py  test_sklearn_like.py  test_sudachi_tokenizer.py  test_whitespace_tokenizer.py  test_word_tokenizer.py
tiny_tokenizer/: __init__.py  character_tokenizer.py  resource.py  sentence_tokenizer.py  tiny_tokenizer_token.py  word_tokenizer.py
tiny_tokenizer/word_tokenizers/: __init__.py  character_tokenizer.py  janome_tokenizer.py  kytea_tokenizer.py  mecab_tokenizer.py  sentencepiece_tokenizer.py  sudachi_tokenizer.py  tokenizer.py  whitespace_tokenizer.py
