[tool.ruff]
line-length = 119

[tool.poetry]
name = "konoha"
version = "5.5.4"
description = "A tiny sentence/word tokenizer for Japanese text written in Python"
authors = ["himkt <himkt@klis.tsukuba.ac.jp>"]
readme = "README.md"
packages = [{include = "konoha", from = "src" }]
include = ["src/konoha/py.typed"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0"
boto3 = {version = "^1.34.0", optional = true}
fastapi = {version = "<1.0.0", optional = true}
janome = {version = "^0.5.0", optional = true}
kytea = {version = "^0.1.8", optional = true}
nagisa = {version = "^0.2.10", optional = true}
natto-py = {version = "^1.0.0", optional = true}
requests = "<3.0.0"
sentencepiece = {version = "^0.1.85", optional = true}
sudachipy = {version = "^0.6.8", optional = true}
sudachidict-core = {version = "20230927", optional = true}
uvicorn = {version = "<0.26.0", optional = true}

[tool.poetry.extras]
janome = ["janome"]
mecab = ["natto-py"]
kytea = ["kytea"]
sudachi = ["sudachipy", "sudachidict-core"]
nagisa = ["nagisa"]
sentencepiece = ["sentencepiece"]
remote = ["boto3"]
server = ["fastapi", "uvicorn"]
all = ["janome", "natto-py", "kytea", "sudachipy", "sudachidict-core", "nagisa", "sentencepiece", "boto3", "fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
sphinx = "<7.2.0"
pydata-sphinx-theme = "<0.15.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[[tool.mypy.overrides]]
module = [
    "boto3",
    "janome.tokenizer",
    "nagisa",
    "natto",
    "Mykytea",
    "sentencepiece",
    "sudachipy",
]
ignore_missing_imports = true
