[project]
name = "konoha"
version = "5.6.0"
description = "Add your description here"
authors = [{ name = "himkt", email = "himkt@klis.tsukuba.ac.jp" }]
dependencies = [
    "requests<3.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"

[project.optional-dependencies]
server = [
    "fastapi<1.0.0",
    "uvicorn<0.26.0",
]
all = [
    "boto3~=1.34.0",
    "fastapi<1.0.0",
    "janome~=0.5.0",
    "kytea~=0.1.0",
    "nagisa~=0.2.10",
    "natto-py~=1.0.0",
    "sentencepiece~=0.1.85",
    "sudachidict-core==20230927",
    "uvicorn<0.26.0",
]
remote = [
    "boto3~=1.34.0",
]
janome = [
    "janome~=0.5.0",
]
kytea = [
    "kytea~=0.1.0",
]
nagisa = [
    "nagisa~=0.2.10",
]
mecab = [
    "natto-py~=1.0.0",
]
sentencepiece = [
    "sentencepiece~=0.1.85",
]
sudachi = [
    "sudachipy~=0.6.8",
    "sudachidict-core==20230927",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[[tool.mypy.overrides]]
module = [
    "boto3",
    "janome.tokenizer",
    "nagisa",
    "natto",
    "Mykytea",
    "sentencepiece",
    "sudachipy",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "sphinx>=7.3.7",
    "pydata-sphinx-theme>=0.16.1",
]

[tool.ruff]
line-length = 119
